#===================================================================
# project
#-------------------------------------------------------------------
[project]
name = "bh-aws-cli"
version = "0.0.1"
description = "A cli for aws ec2 instance management"
requires-python = ">=3.12"
readme = "README.rst"
authors = [ {name = "Bryan Hann", email = "nobody@nowhere.com"} ]
license = {text = "MIT license"}
maintainers = [ {name = "Bryan Hann", email = "nobody@nowhere.com"} ]
classifiers = [ ]
dependencies = [
    "bh-bump>=0.0.3b0",
    "bump2version>=1.0.1",
    "click>=8.1.7",
    "colorama>=0.4.6",
]
#-------------------------------------------------------------------
[project.scripts]
bh-aws =  "bh_aws.main:group"
#-------------------------------------------------------------------
[project.urls]
bugs      = "https://github.com/bryanhann/bh-aws/issues"
changelog = "https://github.com/bryanhann/bh-aws/blob/master/changelog.md"
homepage  = "https://github.com/bryanhann/bh-aws"


#===================================================================
# build-system
#-------------------------------------------------------------------
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


#===================================================================
# tool.setuptools
#-------------------------------------------------------------------
[tool.setuptools]
package-dir = {"" = "src"}
#-------------------------------------------------------------------
[tool.setuptools.package-data]
"*" = ["*.*"]


#===================================================================
# tool.coverage
#-------------------------------------------------------------------
[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]
#-------------------------------------------------------------------
[tool.coverage.run]
branch = true
source = ["bh_aws", "tests"]
#-------------------------------------------------------------------
[tool.coverage.report]
show_missing = true
fail_under = 100


#===================================================================
# tool.isort
#-------------------------------------------------------------------
[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2


#===================================================================
# tool.mypy
#-------------------------------------------------------------------
[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
warn_no_return = true
files = "."
#-------------------------------------------------------------------
[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

